--- a/about-me.html
+++ b/about-me.html
@@ -50,23 +50,28 @@
         <a href="https://www.instagram.com/koochicopinatas/" class="fa fa-instagram"></a>
         <a href="https://www.tiktok.com/@koochico" class="fa fa-brands fa-tiktok"></a>
       </nav>	
-      <!--   <div id="hamburger-icon" onclick="toggleMobileMenu(this)">
+      <div id="hamburger-icon" onclick="toggleMobileMenu(this)">
         <div class="bar1"></div>
         <div class="bar2"></div>
         <div class="bar3"></div>
         <ul class="mobile-menu">
           <li><a href="index.html">Home</a></li>
-          <li><a href="about-us.html">About us</a></li>
+          <li><a href="about-me.html">About me</a></li>
+          <li><a href="wedding.html">Wedding pinatas</a></li>
+          <li><a href="kids-party.html">Kids party pinatas</a></li>
+          <li><a href="bachelor.html">Bachelor pinatas</a></li>
           <li><a href="contacts.html">Contacts</a></li>
-          <li><a href="events.html">Events</a></li>
-          <li><a href="support-us.html">Support us</a></li>
-        </ul> -->
+        </ul>
       </div>
   </header>
   <section>
     <div class="container">
+      <span class="EN">English</span>
+      <input type="checkbox" class="check">
+      <span class="GR">Ελληνική</span>
       <h1 class="main-heading">Bio</h1>
-      <div class="row mt-5">
+      <div class="row mt-5 text textEN">
+
         <div class="col-3 mt-1">
           <img class="about-me-pic" src="img/about-me.png" alt="picture of me" width="100%">
         </div>		
@@ -80,10 +85,30 @@
             and I was instantly captivated. It became clear to me that this was my true calling.
             After spending years in various unrelated jobs, I finally made the decision to turn my beloved hobby into a full-time profession.
             Sharing my creations with the world and connecting with wonderful people like you is a source of immense joy for me.
-           <br> <br><h5 class="text-content text-left"> Every single item I craft is infused with love and positive energy.</h5>
-           <br> <br> <h5 class="text-content text-left"> Feel free to reach out to me, and together, we can bring your customized, one-of-a-kind piñata vision to life! </h5>
+           <br><h5 class="text-content text-left"> Every single item I craft is infused with love and positive energy.</h5>
+           <br><h5 class="text-content text-left"> Feel free to reach out to me, and together, we can bring your customized, one-of-a-kind piñata vision to life! </h5>
           </p>
         </div>
+      </div>
+        <div class="row mt-5 text textGR">
+          <div class="col-3 mt-1">
+            <img class="about-me-pic" src="img/about-me.png" alt="picture of me" width="100%">
+          </div>		  
+
+        <div class="col-3">
+          <h4 class="text-content text-left">Χαιρετισμοί και καλωσόρισμα!</h4>
+          <p class="text-content text-left"> <br>
+            Είμαι η Στεφανία, και είμαι από την Ελλάδα. Το πάθος μου για την ανακύκλωση και την επαναχρησιμοποίηση ξεκίνησε σε νεαρή ηλικία,
+            καλλιεργημένο από την ενθάρρυνση των γονιών μου. Έχω ασχοληθεί με διάφορες χειροτεχνίες και τέχνες, συμπεριλαμβανομένου του σχεδίου,
+            μακραμέ, ράψιμο, κατασκευή κοσμημάτων, βελονάκι και πολλά άλλα. Τότε, μια μέρα, έπεσα πάνω στον μαγευτικό κόσμο της τέχνης της πινιάτας,
+            και αμέσως γοητεύτηκα. Μου έγινε σαφές ότι αυτή ήταν η πραγματική μου κλίση.
+            Αφού πέρασα χρόνια σε διάφορες άσχετες δουλειές, πήρα τελικά την απόφαση να μετατρέψω το αγαπημένο μου χόμπι σε επάγγελμα πλήρους απασχόλησης.
+            Το να μοιράζομαι τις δημιουργίες μου με τον κόσμο και να συνδέομαι με υπέροχους ανθρώπους όπως εσείς είναι πηγή απέραντης χαράς για μένα.
+           <br><h5 class="text-content text-left"> Κάθε αντικείμενο που κατασκευάζω είναι εμποτισμένο με αγάπη και θετική ενέργεια.</h5>
+           <br><h5 class="text-content text-left"> Μη διστάσετε να επικοινωνήσετε μαζί μου και μαζί μπορούμε να υλοποιήσουμε το εξατομικευμένο, μοναδικό όραμά σας για την πινιάτα! </h5>
+          </p>
+        </div>
+
       </div>
     </div>
   </section>  
