--- a/bachelor.html
+++ b/bachelor.html
@@ -50,54 +50,84 @@
         <a href="https://www.instagram.com/koochicopinatas/" class="fa fa-instagram"></a>
         <a href="https://www.tiktok.com/@koochico" class="fa fa-brands fa-tiktok"></a>
       </nav>	
-      <!--   <div id="hamburger-icon" onclick="toggleMobileMenu(this)">
+      <div id="hamburger-icon" onclick="toggleMobileMenu(this)">
         <div class="bar1"></div>
         <div class="bar2"></div>
         <div class="bar3"></div>
         <ul class="mobile-menu">
           <li><a href="index.html">Home</a></li>
-          <li><a href="about-us.html">About us</a></li>
+          <li><a href="about-me.html">About me</a></li>
+          <li><a href="wedding.html">Wedding pinatas</a></li>
+          <li><a href="kids-party.html">Kids party pinatas</a></li>
+          <li><a href="bachelor.html">Bachelor pinatas</a></li>
           <li><a href="contacts.html">Contacts</a></li>
-          <li><a href="events.html">Events</a></li>
-          <li><a href="support-us.html">Support us</a></li>
-        </ul> -->
+        </ul>
       </div>
   </header>
 
   <section>
     <h1 class="main-heading text-center">Bachelor party Pinatas</h1>
     <div class="container">
-      <img src="img/bachelor/ring.png" alt="pinata image">
+      <img class="ring-pic" src="img/bachelor/ring.png" alt="pinata image">
     </div>
     </section>
   
-    <div class="container">
-      <h3>
-        This is only a small portion of the pinatas! You can request a design of your own, or choose an existing one by contacting me. <br>
-        You can request size, design, writing on top, everything that you like!
-      </h3>
-    </div>
-  
     <section>
       <div class="container">
-        <div class="row mt-5">
-          <div class="col-3 mt-1">
+        
+      <span class="EN">English</span>
+      <input type="checkbox" class="check">
+      <span class="GR">Ελληνική</span>
+
+      <div class="text textEN">
+        <h3>
+          This is only a small portion of the pinatas! You can request a design of your own, or choose an existing one by contacting me. <br>
+          You can request size, design, writing on top, everything that you like!
+        </h3>
+      </div>
+
+      <div class="text textGR">
+        <h3>
+          Αυτό είναι μόνο ένα μικρό μέρος των πινάτων! Μπορείτε να ζητήσετε ένα δικό σας σχέδιο ή να επιλέξετε ένα ήδη υπάρχον, επικοινωνώντας μαζί μου. <br>
+          Μπορείτε να ζητήσετε μέγεθος, σχέδιο, γραφή στην κορυφή, ό,τι σας αρέσει!
+        </h3>
+      </div>
+
+      <div class="row mt-5 text textEN">
+        <div class="col-3 mt-1">
           <img class="wedding-img" src="img/bachelor/ring.png" alt="pinata image">
-          </div>
-          <div class="col-3">
-            <p class="text-content text-left">
-              Ring pinata <br> <br>
-              Really nice gift for a loved one. <br>
-              Material: recycled cardboard
-              <br> easy to break <br>
-              Size: 30x30cm <br>
-              Crafting time: 3-5 days <br>
-              Price: 18€ <br> <br>
+        </div>
+        <div class="col-3">
+          <p class="text-content text-left">
+            Ring pinata <br> <br> 
+            Material: recycled cardboard
+            <br> easy to break <br>
+            Size: 60x40cm <br>
+            Crafting time: 3-5 days <br>
+            Price: 25€ <br> <br>
             <a class="contact-button" href="contacts.html">Contact me</a>
-            </p>
-          </div>
+          </p>
         </div>
       </div>
+
+      <div class="row mt-5 text textGR">
+        <div class="col-3 mt-1">
+        <img class="wedding-img" src="img/bachelor/ring.png" alt="pinata image">
+        </div>
+        <div class="col-3">
+          <p class="text-content text-left">
+            Δαχτυλίδι πινιάτα <br> <br>
+            Υλικό: ανακυκλωμένο χαρτόνι
+            <br> εύκολο να σπάσει <br>
+            Μέγεθος: 60x40cm<br>
+            Χρόνος κατασκευής: 3-5 ημέρες <br>
+            Τιμή: 18€ <br> <br>
+          <a class="contact-button" href="contacts.html">Contact me</a>
+          </p>
+        </div>
+      </div>
+
+    </div>
   
     </section>
 
