--- a/contacts.html
+++ b/contacts.html
@@ -53,17 +53,18 @@
         <a href="https://www.instagram.com/koochicopinatas/" class="fa fa-instagram"></a>
         <a href="https://www.tiktok.com/@koochico" class="fa fa-brands fa-tiktok"></a>
       </nav>	
-      <!--   <div id="hamburger-icon" onclick="toggleMobileMenu(this)">
+      <div id="hamburger-icon" onclick="toggleMobileMenu(this)">
         <div class="bar1"></div>
         <div class="bar2"></div>
         <div class="bar3"></div>
         <ul class="mobile-menu">
           <li><a href="index.html">Home</a></li>
-          <li><a href="about-us.html">About us</a></li>
+          <li><a href="about-me.html">About me</a></li>
+          <li><a href="wedding.html">Wedding pinatas</a></li>
+          <li><a href="kids-party.html">Kids party pinatas</a></li>
+          <li><a href="bachelor.html">Bachelor pinatas</a></li>
           <li><a href="contacts.html">Contacts</a></li>
-          <li><a href="events.html">Events</a></li>
-          <li><a href="support-us.html">Support us</a></li>
-        </ul> -->
+        </ul>
       </div>
   </header>
 
@@ -72,14 +73,13 @@
   <section>
     <div class="container">
     <h1 class="main-heading">Contacts</h1>
-
       <div class="col-1" >
         <div class="whole-div">
           <div class="picture">
             <ion-icon class="icon" name="call-outline"></ion-icon>
           </div>
-          <div class="info">
-            <p class="title">Phone</p>   
+          <div class="info textEN">
+            <p class="title">Phone/Τηλέφωνο</p>   
             <p class="text-inside">+30 6974306282</p>
           </div>
         </div> 
@@ -91,8 +91,8 @@
             <ion-icon class="icon" name="location-outline"></ion-icon>
           </div>
           <div class="info">
-            <p class="title">Location</p>
-            <p class="text-inside">Dilesi, Greece</p>
+            <p class="title">Location/Τοποθεσία</p>
+            <p class="text-inside">Dilesi, Greece/Δήλεσι, Ελλάδα</p>
           </div>
         </div>  
       </div>
@@ -104,7 +104,7 @@
           </div>
           <div class="info">
             <p class="title">Mail</p>        
-            <p class="text-inside">koochico@gmail.com</p>
+            <p class="text-inside">koochico@gmail.com <br>Another email here</p>
           </div>
         </div>
       </div>
@@ -115,8 +115,8 @@
             <ion-icon class="icon" name="time-outline"></ion-icon>
           </div>
           <div class="info">
-            <p class="title">Working Time</p>      
-            <p class="text-inside">Monday-Saturday 9:00-20:00</p>
+            <p class="title">Working Time/Χρόνος εργασίας</p>      
+            <p class="text-inside">Monday-Saturday 9:00-20:00 <br>Δευτέρα-Σάββατο 9:00-20:00</p>
           </div>
         </div> 
       </div>
@@ -125,15 +125,14 @@
 
   <div class="container-2">
     <form>
-      <h3>Get in touch with me</h3>
-      <input type="text" id="name" placeholder="Your Name" required>
-      <input type="email" id="email" placeholder="Your email" required>
-      <input type="text" id="phone" placeholder="Phone number" required>
-      <textarea id="message" rows="4" placeholder="Your message" required></textarea>
-    <button id="btn">Send</button>
+      <h3>Get in touch with me/ <br>Επικοινωνήστε μαζί μου</h3>
+      <input type="text" id="name" placeholder="Your Name/Το όνομά σας" required>
+      <input type="email" id="email" placeholder="Your email/Το email σας" required>
+      <input type="text" id="phone" placeholder="Phone/Τηλέφωνο" required>
+      <textarea id="message" rows="4" placeholder="Your message/Το μήνυμά σας" required></textarea>
+      <button id="btn">Send/Στείλτε</button>
     </form>
   </div>
-
 
   <footer>
     <div>
