--- a/index.html
+++ b/index.html
@@ -50,17 +50,18 @@
         <a href="https://www.instagram.com/koochicopinatas/" class="fa fa-instagram"></a>
         <a href="https://www.tiktok.com/@koochico" class="fa fa-brands fa-tiktok"></a>
       </nav>	
-      <!--   <div id="hamburger-icon" onclick="toggleMobileMenu(this)">
+        <div id="hamburger-icon" onclick="toggleMobileMenu(this)">
         <div class="bar1"></div>
         <div class="bar2"></div>
         <div class="bar3"></div>
         <ul class="mobile-menu">
           <li><a href="index.html">Home</a></li>
-          <li><a href="about-us.html">About us</a></li>
+          <li><a href="about-me.html">About me</a></li>
+          <li><a href="wedding.html">Wedding pinatas</a></li>
+          <li><a href="kids-party.html">Kids party pinatas</a></li>
+          <li><a href="bachelor.html">Bachelor pinatas</a></li>
           <li><a href="contacts.html">Contacts</a></li>
-          <li><a href="events.html">Events</a></li>
-          <li><a href="support-us.html">Support us</a></li>
-        </ul> -->
+        </ul>
       </div>
   </header>
 
