--- a/kids-party.html
+++ b/kids-party.html
@@ -54,17 +54,18 @@
         <a href="https://www.instagram.com/koochicopinatas/" class="fa fa-instagram"></a>
         <a href="https://www.tiktok.com/@koochico" class="fa fa-brands fa-tiktok"></a>
       </nav>	
-      <!--   <div id="hamburger-icon" onclick="toggleMobileMenu(this)">
+      <div id="hamburger-icon" onclick="toggleMobileMenu(this)">
         <div class="bar1"></div>
         <div class="bar2"></div>
         <div class="bar3"></div>
         <ul class="mobile-menu">
           <li><a href="index.html">Home</a></li>
-          <li><a href="about-us.html">About us</a></li>
+          <li><a href="about-me.html">About me</a></li>
+          <li><a href="wedding.html">Wedding pinatas</a></li>
+          <li><a href="kids-party.html">Kids party pinatas</a></li>
+          <li><a href="bachelor.html">Bachelor pinatas</a></li>
           <li><a href="contacts.html">Contacts</a></li>
-          <li><a href="events.html">Events</a></li>
-          <li><a href="support-us.html">Support us</a></li>
-        </ul> -->
+        </ul>
       </div>
   </header>
 
@@ -74,53 +75,64 @@
     <div class="box">
       <img src="img/kids/pic1.png" alt="pinata image">
     </div>
-    <div class="box">
+    <div class="box remove">
       <img src="img/kids/pic2.png" alt="pinata image">
     </div>
     <div class="box">
       <img src="img/kids/pic3.png" alt="pinata image">
     </div>
-    <div class="box">
+    <div class="box remove">
       <img src="img/kids/pic4.png" alt="pinata image">
     </div>
     <div class="box">
       <img src="img/kids/pic5.png" alt="pinata image">
     </div>
-    <div class="box">
+    <div class="box remove">
       <img src="img/kids/pic6.png" alt="pinata image">
     </div>
     <div class="box">
       <img src="img/kids/pic7.png" alt="pinata image">
     </div>
-    <div class="box">
+    <div class="box remove">
       <img src="img/kids/pic8.png" alt="pinata image">
     </div>
     <div class="box">
       <img src="img/kids/pic9.png" alt="pinata image">
     </div>
-    <div class="box">
+    <div class="box remove">
       <img src="img/kids/pic10.png" alt="pinata image">
     </div>
   </div>
-  </section>
+</section>
 
-  <div class="container">
-    <h3>
-      This is only a small portion of the pinatas! You can request a design of your own, or choose an existing one by contacting me. <br>
-      You can request size, design, writing on top, everything that you like!
-    </h3>
-  </div>
-
-  <section>
+<section>
     <div class="container">
-      <div class="row mt-5">
+
+      <span class="EN">English</span>
+      <input type="checkbox" class="check">
+      <span class="GR">Ελληνική</span>
+
+      <div class="text textEN">
+        <h3>
+          This is only a small portion of the pinatas! You can request a design of your own, or choose an existing one by contacting me. <br>
+          You can request size, design, writing on top, everything that you like!
+        </h3>
+      </div>
+
+      <div class="text textGR">
+        <h3>
+          Αυτό είναι μόνο ένα μικρό μέρος των πινάτων! Μπορείτε να ζητήσετε ένα δικό σας σχέδιο ή να επιλέξετε ένα ήδη υπάρχον, επικοινωνώντας μαζί μου. <br>
+          Μπορείτε να ζητήσετε μέγεθος, σχέδιο, γραφή στην κορυφή, ό,τι σας αρέσει!
+        </h3>
+      </div>
+
+      <div class="row mt-5 text textEN">
         <div class="col-3 mt-1">
         <img class="wedding-img" src="img/kids/pic1.png" alt="pinata image">
         </div>
         <div class="col-3">
           <p class="text-content text-left">
             Favorite cartoon pinata <br> <br>
-            Really nice gift for a loved one. <br>
             Material: recycled cardboard
             <br> easy to break <br>
             Size: 30x30cm <br>
@@ -131,24 +143,62 @@
         </div>
       </div>
 
-      <div class="row mt-5">
+      <div class="row mt-5 text textGR">
         <div class="col-3 mt-1">
-          <p class="text-content text-left">
-            Pikachu pinata <br> <br>
-            Material: recycled cardboard
-            <br> easy to break <br>
-            Size: 60x40cm <br>
-            Crafting time: 3-5 days <br>
-            Price: 18€ <br> <br>
-            <a class="contact-button" href="contacts.html">Contact me</a>
-          </p>
+        <img class="wedding-img" src="img/kids/pic1.png" alt="pinata image">
         </div>
         <div class="col-3">
-          <img class="wedding-img" src="img/kids/pic2.png" alt="pinata image">
+          <p class="text-content text-left">
+            Αγαπημένη καρτούν πινιάτα <br> <br>
+            Υλικό: ανακυκλωμένο χαρτόνι
+            <br> εύκολο να σπάσει <br>
+            Μέγεθος: 60x40cm<br>
+            Χρόνος κατασκευής: 3-5 ημέρες <br>
+            Τιμή: 18€ <br> <br>
+          <a class="contact-button" href="contacts.html">Επικοινωνήστε μαζί μου</a>
+          </p>
+        </div>
+      </div>
+
+      <div class="remove">
+        <div class="row mt-5 text textEN">
+          <div class="col-3 mt-1">
+            <p class="text-content text-left">
+              Pikachu pinata <br> <br>
+              Material: recycled cardboard
+              <br> easy to break <br>
+              Size: 60x40cm <br>
+              Crafting time: 3-5 days <br>
+              Price: 18€ <br> <br>
+              <a class="contact-button" href="contacts.html">Contact me</a>
+            </p>
+          </div>
+          <div class="col-3">
+            <img class="wedding-img" src="img/kids/pic2.png" alt="pinata image">
+          </div>
+        </div>
+      </div>
+
+      <div class="remove">
+        <div class="row mt-5 text textGR">
+          <div class="col-3 mt-1">
+            <p class="text-content text-left">
+              Πινιάτα Pikachu <br> <br>
+              Υλικό: ανακυκλωμένο χαρτόνι
+              <br> εύκολο να σπάσει <br>
+              Μέγεθος: 60x40cm<br>
+              Χρόνος κατασκευής: 3-5 ημέρες <br>
+              Τιμή: 18€ <br> <br>
+              <a class="contact-button" href="contacts.html">Επικοινωνήστε μαζί μου</a>
+            </p>
+          </div>
+          <div class="col-3">
+            <img class="wedding-img" src="img/kids/pic2.png" alt="pinata image">
+          </div>
         </div>
       </div>
       
-      <div class="row mt-5">
+      <div class="row mt-5 text textEN">
         <div class="col-3 mt-1">
         <img class="wedding-img" src="img/kids/pic3.png" alt="pinata image">
         </div>
@@ -165,24 +215,62 @@
         </div>
       </div>
 
-      <div class="row mt-5">
+      <div class="row mt-5 text textGR">
         <div class="col-3 mt-1">
-          <p class="text-content text-left">
-            Dragon pinata <br> <br>
-            Material: recycled cardboard
-            <br> easy to break <br>
-            Size: 60x40cm <br>
-            Crafting time: 3-5 days <br>
-            Price: 25€ <br> <br>
-            <a class="contact-button" href="contacts.html">Contact me</a>
-          </p>
+        <img class="wedding-img" src="img/kids/pic3.png" alt="pinata image">
         </div>
         <div class="col-3">
-          <img class="wedding-img" src="img/kids/pic4.png" alt="pinata image">
+          <p class="text-content text-left">
+            Πινιάτα Pokemon <br> <br>
+            Υλικό: ανακυκλωμένο χαρτόνι
+            <br> εύκολο να σπάσει <br>
+            Μέγεθος: 60x40cm<br>
+            Χρόνος κατασκευής: 3-5 ημέρες <br>
+            Τιμή: 18€ <br> <br>
+            <a class="contact-button" href="contacts.html">Επικοινωνήστε μαζί μου</a> 
+          </p>
         </div>
       </div>
 
-      <div class="row mt-5">
+      <div class="remove">
+        <div class="row mt-5 text textEN">
+          <div class="col-3 mt-1">
+            <p class="text-content text-left">
+              Dragon pinata <br> <br>
+              Material: recycled cardboard
+              <br> easy to break <br>
+              Size: 60x40cm <br>
+              Crafting time: 3-5 days <br>
+              Price: 25€ <br> <br>
+              <a class="contact-button" href="contacts.html">Contact me</a>
+            </p>
+          </div>
+          <div class="col-3">
+            <img class="wedding-img" src="img/kids/pic4.png" alt="pinata image">
+          </div>
+        </div>
+      </div>
+
+      <div class="remove">
+        <div class="row mt-5 remove text textGR">
+          <div class="col-3 mt-1">
+            <p class="text-content text-left">
+              Πινιάτα δράκος <br> <br>
+              Υλικό: ανακυκλωμένο χαρτόνι
+              <br> εύκολο να σπάσει <br>
+              Μέγεθος: 60x40cm<br>
+              Χρόνος κατασκευής: 3-5 ημέρες <br>
+              Τιμή: 25€ <br> <br>
+              <a class="contact-button" href="contacts.html">Επικοινωνήστε μαζί μου</a>
+            </p>
+          </div>
+          <div class="col-3">
+            <img class="wedding-img" src="img/kids/pic4.png" alt="pinata image">
+          </div>
+        </div>
+      </div>
+
+      <div class="row mt-5 text textEN">
         <div class="col-3 mt-1">
           <div class="col-3">
             <img class="wedding-img" src="img/kids/pic5.png" alt="pinata image">
@@ -199,24 +287,62 @@
           </p>
       </div>
 
-      <div class="row mt-5">
+      <div class="row mt-5 text textGR">
         <div class="col-3 mt-1">
-          <p class="text-content text-left">
-            Spiderman pinata <br> <br>
-            Material: recycled cardboard
-            <br> easy to break <br>
-            Size: 30x30cm <br>
-            Crafting time: 3-5 days <br>
-            Price: 18€ <br> <br>
-            <a class="contact-button" href="contacts.html">Contact me</a>
-          </p>
+          <div class="col-3">
+            <img class="wedding-img" src="img/kids/pic5.png" alt="pinata image">
+          </div>  
         </div>
-        <div class="col-3">
-          <img class="wedding-img" src="img/kids/pic6.png" alt="pinata image">
+        <p class="text-content text-left">
+            Πινιάτα Μπομπ Σφουγγαράκης <br> <br>
+            Υλικό: ανακυκλωμένο χαρτόνι
+            <br> εύκολο να σπάσει <br>
+            Μέγεθος: 60x40cm<br>
+            Χρόνος κατασκευής: 3-5 ημέρες <br>
+            Τιμή: 25€ <br> <br>
+            <a class="contact-button" href="contacts.html">Επικοινωνήστε μαζί μου</a>
+          </p>
+      </div>
+
+      <div class="remove">
+        <div class="row mt-5 remove text textEN">
+          <div class="col-3 mt-1">
+            <p class="text-content text-left">
+              Spiderman pinata <br> <br>
+              Material: recycled cardboard
+              <br> easy to break <br>
+              Size: 30x30cm <br>
+              Crafting time: 3-5 days <br>
+              Price: 18€ <br> <br>
+              <a class="contact-button" href="contacts.html">Contact me</a>
+            </p>
+          </div>
+          <div class="col-3">
+            <img class="wedding-img" src="img/kids/pic6.png" alt="pinata image">
+          </div>
         </div>
       </div>
 
-      <div class="row mt-5">
+      <div class="remove">
+        <div class="row mt-5 remove text textGR">
+          <div class="col-3 mt-1">
+            <p class="text-content text-left">
+              Πινιάτα Spiderman <br> <br>
+              Υλικό: ανακυκλωμένο χαρτόνι
+              <br> εύκολο να σπάσει <br>
+              Μέγεθος: 60x40cm<br>
+              Χρόνος κατασκευής: 3-5 ημέρες <br>
+              Τιμή: 18€ <br> <br>
+              <a class="contact-button" href="contacts.html">Επικοινωνήστε μαζί μου</a>
+            </p>
+          </div>
+          <div class="col-3">
+            <img class="wedding-img" src="img/kids/pic6.png" alt="pinata image">
+          </div>
+        </div>
+      </div>
+
+      <div class="row mt-5 text textEN">
         <div class="col-3 mt-1">
           <div class="col-3">
             <img class="wedding-img" src="img/kids/pic7.png" alt="pinata image">
@@ -233,24 +359,62 @@
           </p>
       </div>
 
-      <div class="row mt-5">
+      <div class="row mt-5 text textGR">
         <div class="col-3 mt-1">
-          <p class="text-content text-left">
-            Joystick pinata <br> <br>
-            Material: recycled cardboard
-            <br> easy to break <br>
-            Size: 60x40cm <br>
-            Crafting time: 3-5 days <br>
-            Price: 25€ <br> <br>
-            <a class="contact-button" href="contacts.html">Contact me</a>
-          </p>
+          <div class="col-3">
+            <img class="wedding-img" src="img/kids/pic7.png" alt="pinata image">
+          </div>    
         </div>
-        <div class="col-3">
-          <img class="wedding-img" src="img/kids/pic8.png" alt="pinata image">
+        <p class="text-content text-left">
+            Πινιάτα μονόκερου <br> <br>
+            Υλικό: ανακυκλωμένο χαρτόνι
+            <br> εύκολο να σπάσει <br>
+            Μέγεθος: 60x40cm<br>
+            Χρόνος κατασκευής: 3-5 ημέρες <br>
+            Τιμή: 18€ <br> <br>
+            <a class="contact-button" href="contacts.html">Επικοινωνήστε μαζί μου</a>
+          </p>
+      </div>
+
+      <div class="remove">
+        <div class="row mt-5 text textEN">
+          <div class="col-3 mt-1">
+            <p class="text-content text-left">
+              Joystick pinata <br> <br>
+              Material: recycled cardboard
+              <br> easy to break <br>
+              Size: 60x40cm <br>
+              Crafting time: 3-5 days <br>
+              Price: 25€ <br> <br>
+              <a class="contact-button" href="contacts.html">Contact me</a>
+            </p>
+          </div>
+          <div class="col-3">
+            <img class="wedding-img" src="img/kids/pic8.png" alt="pinata image">
+          </div>
         </div>
       </div>
 
-      <div class="row mt-5">
+      <div class="remove">
+        <div class="row mt-5 text textGR">
+          <div class="col-3 mt-1">
+            <p class="text-content text-left">
+              Πινιάτα Joystick <br> <br>
+              Υλικό: ανακυκλωμένο χαρτόνι
+              <br> εύκολο να σπάσει <br>
+              Μέγεθος: 60x40cm<br>
+              Χρόνος κατασκευής: 3-5 ημέρες <br>
+              Τιμή: 25€ <br> <br>
+              <a class="contact-button" href="contacts.html">Επικοινωνήστε μαζί μου</a>
+            </p>
+          </div>
+          <div class="col-3">
+            <img class="wedding-img" src="img/kids/pic8.png" alt="pinata image">
+          </div>
+        </div>
+      </div>
+
+      <div class="row mt-5 text textEN">
         <div class="col-3 mt-1">
           <div class="col-3">
             <img class="wedding-img" src="img/kids/pic9.png" alt="pinata image">
@@ -267,23 +431,63 @@
           </p>
       </div>
 
-      <div class="row mt-5">
+      <div class="row mt-5 text textGR">
         <div class="col-3 mt-1">
-          <p class="text-content text-left">
-            Basketball pinata <br> <br>
-            Material: recycled cardboard
-            <br> easy to break <br>
-            Size: 30x30cm <br>
-            Crafting time: 3-5 days <br>
-            Price: 18€ <br> <br>
-            <a class="contact-button" href="contacts.html">Contact me</a>
-          </p>
+          <div class="col-3">
+            <img class="wedding-img" src="img/kids/pic9.png" alt="pinata image">
+          </div> 
         </div>
-        <div class="col-3">
-          <img class="wedding-img" src="img/kids/pic10.png" alt="pinata image">
+        <p class="text-content text-left">
+          Πινιάτα με παπαγάλο <br> <br>
+          Υλικό: ανακυκλωμένο χαρτόνι
+          <br> εύκολο να σπάσει <br>
+          Μέγεθος: 60x40cm<br>
+          Χρόνος κατασκευής: 3-5 ημέρες <br>
+          Τιμή: 25€ <br> <br>
+            <a class="contact-button" href="contacts.html">Επικοινωνήστε μαζί μου</a>
+          </p>
+      </div>
+
+      <div class="remove">
+        <div class="row mt-5 text textEN">
+          <div class="col-3 mt-1">
+            <p class="text-content text-left">
+              Basketball pinata <br> <br>
+              Material: recycled cardboard
+              <br> easy to break <br>
+              Size: 30x30cm <br>
+              Crafting time: 3-5 days <br>
+              Price: 18€ <br> <br>
+              <a class="contact-button" href="contacts.html">Contact me</a>
+            </p>
+          </div>
+          <div class="col-3">
+            <img class="wedding-img" src="img/kids/pic10.png" alt="pinata image">
+          </div>
         </div>
       </div>
+
+      <div class="remove">
+        <div class="row mt-5 remove text textGR">
+          <div class="col-3 mt-1">
+            <p class="text-content text-left">
+              Πινιάτα μπάσκετ <br> <br>
+              Υλικό: ανακυκλωμένο χαρτόνι
+              <br> εύκολο να σπάσει <br>
+              Μέγεθος: 60x40cm<br>
+              Χρόνος κατασκευής: 3-5 ημέρες <br>
+              Τιμή: 25€ <br> <br>
+              <a class="contact-button" href="contacts.html">Επικοινωνήστε μαζί μου</a>
+            </p>
+          </div>
+          <div class="col-3">
+            <img class="wedding-img" src="img/kids/pic10.png" alt="pinata image">
+          </div>
+        </div>
+      </div>
+      
     </div>
+
 
   </section>
   <footer>
