--- a/bachelor.html
+++ b/bachelor.html
@@ -46,9 +46,9 @@
         </div>
         <a class="menu-item" href="contacts.html">Contacts</a>  
 
-        <a href="https://www.facebook.com/KooChico" class="fa fa-facebook"></a>
-        <a href="https://www.instagram.com/koochicopinatas/" class="fa fa-instagram"></a>
-        <a href="https://www.tiktok.com/@koochico" class="fa fa-brands fa-tiktok"></a>
+        <a href="https://www.facebook.com/KooChico" class="fa fa-facebook" target="_blank"></a>
+        <a href="https://www.instagram.com/koochicopinatas/" class="fa fa-instagram" target="_blank"></a>
+        <a href="https://www.tiktok.com/@koochico" class="fa fa-brands fa-tiktok" target="_blank"></a>
       </nav>	
       <div id="hamburger-icon" onclick="toggleMobileMenu(this)">
         <div class="bar1"></div>
@@ -134,9 +134,9 @@
   <footer>
     <div>
       <h1 class="pin">KooChico Pinatas</h1>
-      <a href="https://www.facebook.com/KooChico" class="fa fa-facebook"></a>
-      <a href="https://www.instagram.com/koochicopinatas/" class="fa fa-instagram"></a>
-      <a href="https://www.tiktok.com/@koochico" class="fa fa-brands fa-tiktok"></a>
+      <a href="https://www.facebook.com/KooChico" class="fa fa-facebook" target="_blank"></a>
+      <a href="https://www.instagram.com/koochicopinatas/" class="fa fa-instagram" target="_blank"></a>
+      <a href="https://www.tiktok.com/@koochico" class="fa fa-brands fa-tiktok" target="_blank"></a>
     </div>
   </footer>
 
