--- a/kids-party.html
+++ b/kids-party.html
@@ -50,9 +50,9 @@
         </div>
         <a class="menu-item" href="contacts.html">Contacts</a>  
 
-        <a href="https://www.facebook.com/KooChico" class="fa fa-facebook"></a>
-        <a href="https://www.instagram.com/koochicopinatas/" class="fa fa-instagram"></a>
-        <a href="https://www.tiktok.com/@koochico" class="fa fa-brands fa-tiktok"></a>
+        <a href="https://www.facebook.com/KooChico" class="fa fa-facebook" target="_blank"></a>
+        <a href="https://www.instagram.com/koochicopinatas/" class="fa fa-instagram" target="_blank"></a>
+        <a href="https://www.tiktok.com/@koochico" class="fa fa-brands fa-tiktok" target="_blank"></a>
       </nav>	
       <div id="hamburger-icon" onclick="toggleMobileMenu(this)">
         <div class="bar1"></div>
@@ -137,7 +137,7 @@
             <br> easy to break <br>
             Size: 30x30cm <br>
             Crafting time: 3-5 days <br>
-            Price: 18€ <br> <br>
+            Price: 25€ <br> <br>
           <a class="contact-button" href="contacts.html">Contact me</a>
           </p>
         </div>
@@ -154,50 +154,46 @@
             <br> εύκολο να σπάσει <br>
             Μέγεθος: 60x40cm<br>
             Χρόνος κατασκευής: 3-5 ημέρες <br>
-            Τιμή: 18€ <br> <br>
+            Τιμή: 25€ <br> <br>
           <a class="contact-button" href="contacts.html">Επικοινωνήστε μαζί μου</a>
           </p>
         </div>
       </div>
 
-      <div class="remove">
-        <div class="row mt-5 text textEN">
-          <div class="col-3 mt-1">
-            <p class="text-content text-left">
-              Pikachu pinata <br> <br>
-              Material: recycled cardboard
-              <br> easy to break <br>
-              Size: 60x40cm <br>
-              Crafting time: 3-5 days <br>
-              Price: 18€ <br> <br>
-              <a class="contact-button" href="contacts.html">Contact me</a>
-            </p>
-          </div>
-          <div class="col-3">
-            <img class="wedding-img" src="img/kids/pic2.png" alt="pinata image">
-          </div>
+      <div class="row mt-5 text textEN">
+        <div class="col-3 mt-1">
+          <p class="text-content text-left">
+            Pikachu pinata <br> <br>
+            Material: recycled cardboard
+            <br> easy to break <br>
+            Size: 60x40cm <br>
+            Crafting time: 3-5 days <br>
+            Price: 25€ <br> <br>
+            <a class="contact-button" href="contacts.html">Contact me</a>
+          </p>
+        </div>
+        <div class="col-3">
+          <img class="wedding-img" src="img/kids/pic2.png" alt="pinata image">
         </div>
       </div>
 
-      <div class="remove">
-        <div class="row mt-5 text textGR">
-          <div class="col-3 mt-1">
-            <p class="text-content text-left">
-              Πινιάτα Pikachu <br> <br>
-              Υλικό: ανακυκλωμένο χαρτόνι
-              <br> εύκολο να σπάσει <br>
-              Μέγεθος: 60x40cm<br>
-              Χρόνος κατασκευής: 3-5 ημέρες <br>
-              Τιμή: 18€ <br> <br>
-              <a class="contact-button" href="contacts.html">Επικοινωνήστε μαζί μου</a>
-            </p>
-          </div>
-          <div class="col-3">
-            <img class="wedding-img" src="img/kids/pic2.png" alt="pinata image">
-          </div>
+      <div class="row mt-5 text textGR">
+        <div class="col-3 mt-1">
+          <p class="text-content text-left">
+            Πινιάτα Pikachu <br> <br>
+            Υλικό: ανακυκλωμένο χαρτόνι
+            <br> εύκολο να σπάσει <br>
+            Μέγεθος: 60x40cm<br>
+            Χρόνος κατασκευής: 3-5 ημέρες <br>
+            Τιμή: 25€ <br> <br>
+            <a class="contact-button" href="contacts.html">Επικοινωνήστε μαζί μου</a>
+          </p>
+        </div>
+        <div class="col-3">
+          <img class="wedding-img" src="img/kids/pic2.png" alt="pinata image">
         </div>
       </div>
-      
+ 
       <div class="row mt-5 text textEN">
         <div class="col-3 mt-1">
         <img class="wedding-img" src="img/kids/pic3.png" alt="pinata image">
@@ -232,41 +228,38 @@
         </div>
       </div>
 
-      <div class="remove">
-        <div class="row mt-5 text textEN">
-          <div class="col-3 mt-1">
-            <p class="text-content text-left">
-              Dragon pinata <br> <br>
-              Material: recycled cardboard
-              <br> easy to break <br>
-              Size: 60x40cm <br>
-              Crafting time: 3-5 days <br>
-              Price: 25€ <br> <br>
-              <a class="contact-button" href="contacts.html">Contact me</a>
-            </p>
-          </div>
-          <div class="col-3">
-            <img class="wedding-img" src="img/kids/pic4.png" alt="pinata image">
-          </div>
+      <div class="row mt-5 text textEN">
+         <div class="col-3 mt-1">
+           <p class="text-content text-left">
+            Dragon pinata <br> <br>
+            Material: recycled cardboard
+            <br> easy to break <br>
+            Size: 60x40cm <br>
+            Crafting time: 3-5 days <br>
+            Price: 25€ <br> <br>
+            <a class="contact-button" href="contacts.html">Contact me</a>
+          </p>
+        </div>
+        <div class="col-3">
+          <img class="wedding-img" src="img/kids/pic4.png" alt="pinata image">
         </div>
       </div>
 
-      <div class="remove">
-        <div class="row mt-5 remove text textGR">
-          <div class="col-3 mt-1">
-            <p class="text-content text-left">
-              Πινιάτα δράκος <br> <br>
-              Υλικό: ανακυκλωμένο χαρτόνι
-              <br> εύκολο να σπάσει <br>
-              Μέγεθος: 60x40cm<br>
-              Χρόνος κατασκευής: 3-5 ημέρες <br>
-              Τιμή: 25€ <br> <br>
-              <a class="contact-button" href="contacts.html">Επικοινωνήστε μαζί μου</a>
-            </p>
-          </div>
-          <div class="col-3">
-            <img class="wedding-img" src="img/kids/pic4.png" alt="pinata image">
-          </div>
+
+      <div class="row mt-5 remove text textGR">
+        <div class="col-3 mt-1">
+          <p class="text-content text-left">
+           Πινιάτα δράκος <br> <br>
+            Υλικό: ανακυκλωμένο χαρτόνι
+            <br> εύκολο να σπάσει <br>
+            Μέγεθος: 60x40cm<br>
+            Χρόνος κατασκευής: 3-5 ημέρες <br>
+            Τιμή: 25€ <br> <br>
+            <a class="contact-button" href="contacts.html">Επικοινωνήστε μαζί μου</a>
+          </p>
+        </div>
+        <div class="col-3">
+          <img class="wedding-img" src="img/kids/pic4.png" alt="pinata image">
         </div>
       </div>
 
@@ -304,42 +297,38 @@
           </p>
       </div>
 
-      <div class="remove">
-        <div class="row mt-5 remove text textEN">
-          <div class="col-3 mt-1">
-            <p class="text-content text-left">
-              Spiderman pinata <br> <br>
-              Material: recycled cardboard
-              <br> easy to break <br>
-              Size: 30x30cm <br>
-              Crafting time: 3-5 days <br>
-              Price: 18€ <br> <br>
-              <a class="contact-button" href="contacts.html">Contact me</a>
-            </p>
-          </div>
-          <div class="col-3">
-            <img class="wedding-img" src="img/kids/pic6.png" alt="pinata image">
-          </div>
+      <div class="row mt-5 remove text textEN">
+        <div class="col-3 mt-1">
+          <p class="text-content text-left">
+            Spiderman pinata <br> <br>
+            Material: recycled cardboard
+            <br> easy to break <br>
+            Size: 30x30cm <br>
+            Crafting time: 3-5 days <br>
+            Price: 25€ <br> <br>
+            <a class="contact-button" href="contacts.html">Contact me</a>
+          </p>
+        </div>
+        <div class="col-3">
+          <img class="wedding-img" src="img/kids/pic6.png" alt="pinata image">
         </div>
       </div>
 
-      <div class="remove">
-        <div class="row mt-5 remove text textGR">
-          <div class="col-3 mt-1">
-            <p class="text-content text-left">
-              Πινιάτα Spiderman <br> <br>
-              Υλικό: ανακυκλωμένο χαρτόνι
-              <br> εύκολο να σπάσει <br>
-              Μέγεθος: 60x40cm<br>
-              Χρόνος κατασκευής: 3-5 ημέρες <br>
-              Τιμή: 18€ <br> <br>
-              <a class="contact-button" href="contacts.html">Επικοινωνήστε μαζί μου</a>
-            </p>
-          </div>
-          <div class="col-3">
-            <img class="wedding-img" src="img/kids/pic6.png" alt="pinata image">
-          </div>
+      <div class="row mt-5 remove text textGR">
+         <div class="col-3 mt-1">
+          <p class="text-content text-left">
+            Πινιάτα Spiderman <br> <br>
+            Υλικό: ανακυκλωμένο χαρτόνι
+            <br> εύκολο να σπάσει <br>
+            Μέγεθος: 60x40cm<br>
+            Χρόνος κατασκευής: 3-5 ημέρες <br>
+            Τιμή: 25€ <br> <br>
+            <a class="contact-button" href="contacts.html">Επικοινωνήστε μαζί μου</a>
+          </p>
         </div>
+        <div class="col-3">
+          <img class="wedding-img" src="img/kids/pic6.png" alt="pinata image">
+         </div>
       </div>
 
       <div class="row mt-5 text textEN">
@@ -376,7 +365,6 @@
           </p>
       </div>
 
-      <div class="remove">
         <div class="row mt-5 text textEN">
           <div class="col-3 mt-1">
             <p class="text-content text-left">
@@ -393,24 +381,21 @@
             <img class="wedding-img" src="img/kids/pic8.png" alt="pinata image">
           </div>
         </div>
-      </div>
 
-      <div class="remove">
-        <div class="row mt-5 text textGR">
-          <div class="col-3 mt-1">
-            <p class="text-content text-left">
-              Πινιάτα Joystick <br> <br>
-              Υλικό: ανακυκλωμένο χαρτόνι
-              <br> εύκολο να σπάσει <br>
-              Μέγεθος: 60x40cm<br>
-              Χρόνος κατασκευής: 3-5 ημέρες <br>
-              Τιμή: 25€ <br> <br>
-              <a class="contact-button" href="contacts.html">Επικοινωνήστε μαζί μου</a>
+      <div class="row mt-5 text textGR">
+        <div class="col-3 mt-1">
+          <p class="text-content text-left">
+            Πινιάτα Joystick <br> <br>
+            Υλικό: ανακυκλωμένο χαρτόνι
+            <br> εύκολο να σπάσει <br>
+            Μέγεθος: 60x40cm<br>
+            Χρόνος κατασκευής: 3-5 ημέρες <br>
+            Τιμή: 25€ <br> <br>
+            <a class="contact-button" href="contacts.html">Επικοινωνήστε μαζί μου</a>
             </p>
-          </div>
-          <div class="col-3">
-            <img class="wedding-img" src="img/kids/pic8.png" alt="pinata image">
-          </div>
+        </div>
+        <div class="col-3">
+          <img class="wedding-img" src="img/kids/pic8.png" alt="pinata image">
         </div>
       </div>
 
@@ -448,7 +433,6 @@
           </p>
       </div>
 
-      <div class="remove">
         <div class="row mt-5 text textEN">
           <div class="col-3 mt-1">
             <p class="text-content text-left">
@@ -465,9 +449,7 @@
             <img class="wedding-img" src="img/kids/pic10.png" alt="pinata image">
           </div>
         </div>
-      </div>
 
-      <div class="remove">
         <div class="row mt-5 remove text textGR">
           <div class="col-3 mt-1">
             <p class="text-content text-left">
@@ -484,7 +466,6 @@
             <img class="wedding-img" src="img/kids/pic10.png" alt="pinata image">
           </div>
         </div>
-      </div>
       
     </div>
 
@@ -493,9 +474,9 @@
   <footer>
     <div>
       <h1 class="pin">KooChico Pinatas</h1>
-      <a href="https://www.facebook.com/KooChico" class="fa fa-facebook"></a>
-      <a href="https://www.instagram.com/koochicopinatas/" class="fa fa-instagram"></a>
-      <a href="https://www.tiktok.com/@koochico" class="fa fa-brands fa-tiktok"></a>
+      <a href="https://www.facebook.com/KooChico" class="fa fa-facebook" target="_blank"></a>
+      <a href="https://www.instagram.com/koochicopinatas/" class="fa fa-instagram" target="_blank"></a>
+      <a href="https://www.tiktok.com/@koochico" class="fa fa-brands fa-tiktok" target="_blank"></a>
     </div>
   </footer>
 
