--- a/wedding.html
+++ b/wedding.html
@@ -50,9 +50,9 @@
         </div>
         <a class="menu-item" href="contacts.html">Contacts</a>  
 
-        <a href="https://www.facebook.com/KooChico" class="fa fa-facebook"></a>
-        <a href="https://www.instagram.com/koochicopinatas/" class="fa fa-instagram"></a>
-        <a href="https://www.tiktok.com/@koochico" class="fa fa-brands fa-tiktok"></a>
+        <a href="https://www.facebook.com/KooChico" class="fa fa-facebook" target="_blank"></a>
+        <a href="https://www.instagram.com/koochicopinatas/" class="fa fa-instagram" target="_blank"></a>
+        <a href="https://www.tiktok.com/@koochico" class="fa fa-brands fa-tiktok" target="_blank"></a>
       </nav>	
       <div id="hamburger-icon" onclick="toggleMobileMenu(this)">
         <div class="bar1"></div>
@@ -146,7 +146,8 @@
           </p>
         </div>
       </div>
-      <div class="remove">
+
+      <!--<div class="remove"> -->
         <div class="row mt-5 text textEN">
           <div class="col-3 mt-1">
             <p class="text-content text-left">
@@ -162,10 +163,10 @@
           <div class="col-3">
             <img class="wedding-img" src="img/wedding/white-heart.jpg" alt="pinata image">
           </div>
-        </div>
+        <!--</div> -->
       </div>
 
-      <div class="remove">
+      <!--<div class="remove"> -->
         <div class="row mt-5 remove text textGR">
           <div class="col-3 mt-1">
             <p class="text-content text-left">
@@ -181,7 +182,7 @@
           <div class="col-3">
             <img class="wedding-img" src="img/wedding/white-heart.jpg" alt="pinata image">
           </div>
-        </div>
+        <!--</div> -->
       </div>
 
       <div class="row mt-5 text textEN">
@@ -219,7 +220,7 @@
         </div>
       </div>
 
-      <div class="remove">
+      <!--<div class="remove"> -->
         <div class="row mt-5 text textEN">
           <div class="col-3 mt-1">
             <p class="text-content text-left">
@@ -235,13 +236,13 @@
           <div class="col-3">
             <img class="wedding-img" src="img/wedding/letter.JPG" alt="pinata image">
           </div>
-        </div>
+        <!--</div> -->
       </div>
 
-      <div class="remove">
-        <div class="row mt-5 remove text textGR">
+     <!-- <div class="remove"> -->
+        <div class="row mt-5 text textGR">
           <div class="col-3 mt-1">
-            <p class="text-content text-left">
+            <p class="text-content text-left remove">
               Πινιάτα με γράμματα <br> <br>
               Υλικό: ανακυκλωμένο χαρτόνι
               <br> εύκολο να σπάσει <br>
@@ -254,7 +255,7 @@
           <div class="col-3">
             <img class="wedding-img" src="img/wedding/letter.JPG" alt="pinata image">
           </div>
-        </div>
+        <!--</div> -->
       </div>
 
     </div>
@@ -263,9 +264,9 @@
   <footer>
     <div>
       <h1 class="pin">KooChico Pinatas</h1>
-      <a href="https://www.facebook.com/KooChico" class="fa fa-facebook"></a>
-      <a href="https://www.instagram.com/koochicopinatas/" class="fa fa-instagram"></a>
-      <a href="https://www.tiktok.com/@koochico" class="fa fa-brands fa-tiktok"></a>
+      <a href="https://www.facebook.com/KooChico" class="fa fa-facebook" target="_blank"></a>
+      <a href="https://www.instagram.com/koochicopinatas/" class="fa fa-instagram" target="_blank"></a>
+      <a href="https://www.tiktok.com/@koochico" class="fa fa-brands fa-tiktok" target="_blank"></a>
     </div>
   </footer>
 
