--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Stoil Georgiev">
-	<meta name="description" content="Handmade good quality pinatas! Kid party pinatas, bachelor pinatas, wedding pinatas, make a pinata">
+	<meta name="description" content="Handmade good quality pinatas! Kid party pinatas, bachelor pinatas, wedding pinatas, make a pinata. Custom pinata. greek pinata. ">
 		
   <title>KooChico Pinatas</title>
 
@@ -23,7 +23,6 @@
       <path fill-rule="evenodd" d="M7.646 4.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 5.707l-5.646 5.647a.5.5 0 0 1-.708-.708l6-6z"/>
     </svg>
   </div>
-
 
   <header>
     <div class="container m-5">
@@ -50,20 +49,22 @@
         <a href="https://www.instagram.com/koochicopinatas/" class="fa fa-instagram" target="_blank"></a>
         <a href="https://www.tiktok.com/@koochico" class="fa fa-brands fa-tiktok" target="_blank"></a>
       </nav>	
-        <div id="hamburger-icon" onclick="toggleMobileMenu(this)">
+      <div class="mobile-nav" id="hamburger-icon" onclick="toggleMobileMenu(this)">
         <div class="bar1"></div>
         <div class="bar2"></div>
         <div class="bar3"></div>
         <ul class="mobile-menu">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about-me.html">About me</a></li>
-          <li><a href="wedding.html">Wedding pinatas</a></li>
-          <li><a href="kids-party.html">Kids party pinatas</a></li>
-          <li><a href="bachelor.html">Bachelor pinatas</a></li>
-          <li><a href="contacts.html">Contacts</a></li>
+          <li><a class="active elem" href="index.html">Home</a></li>
+          <li><a class="elem" href="about-me.html">About me</a></li>
+          <li><a class="elem" href="wedding.html">Wedding pinatas</a></li>
+          <li><a class="elem" href="kids-party.html">Kids party pinatas</a></li>
+          <li><a class="elem" href="bachelor.html">Bachelor pinatas</a></li>
+          <li><a class="elem" href="contacts.html">Contacts</a></li>
         </ul>
       </div>
-  </header>
+    
+    
+  </header> 
 
   <section class="section">
     <img src="img/hitting.jpg" alt="Background Image" id="background-image">
@@ -80,7 +81,7 @@
       <h1 class="pin">KooChico Pinatas</h1>
       <a href="https://www.facebook.com/KooChico" class="fa fa-facebook" target="_blank"></a>
       <a href="https://www.instagram.com/koochicopinatas/" class="fa fa-instagram" target="_blank"></a>
-      <a href="https://www.tiktok.com/@koochico" class="fa fa-brands fa-tiktok" target="_blank"></a>
+      <a href="https://www.tiktok.com/@koochico" class="fa fa-brands fa-tiktok" target="_blank"  ></a>
     </div>
   </footer>
 
