--- a/kids-party.html
+++ b/kids-party.html
@@ -54,17 +54,17 @@
         <a href="https://www.instagram.com/koochicopinatas/" class="fa fa-instagram" target="_blank"></a>
         <a href="https://www.tiktok.com/@koochico" class="fa fa-brands fa-tiktok" target="_blank"></a>
       </nav>	
-      <div id="hamburger-icon" onclick="toggleMobileMenu(this)">
+      <div class="mobile-nav" id="hamburger-icon" onclick="toggleMobileMenu(this)">
         <div class="bar1"></div>
         <div class="bar2"></div>
         <div class="bar3"></div>
         <ul class="mobile-menu">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about-me.html">About me</a></li>
-          <li><a href="wedding.html">Wedding pinatas</a></li>
-          <li><a href="kids-party.html">Kids party pinatas</a></li>
-          <li><a href="bachelor.html">Bachelor pinatas</a></li>
-          <li><a href="contacts.html">Contacts</a></li>
+          <li><a class="elem" href="index.html">Home</a></li>
+          <li><a class="elem" href="about-me.html">About me</a></li>
+          <li><a class="elem" href="wedding.html">Wedding pinatas</a></li>
+          <li><a class="active elem" href="kids-party.html">Kids party pinatas</a></li>
+          <li><a class="elem" href="bachelor.html">Bachelor pinatas</a></li>
+          <li><a class="elem" href="contacts.html">Contacts</a></li>
         </ul>
       </div>
   </header>
